--- a/journal/201904.md
+++ b/journal/201904.md
@@ -200,31 +200,45 @@ Upcoming:
 ## Media
 Ditto Overview: 
 
-JZ spoke with The Block about Decred’s experience listing on Binance. https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/  
+@jz spoke with [The Block](https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/  ) about Decred’s experience listing on Binance.
 
-Ticket-voter messaging as a tool for educating people on how Decred’s voting system works was created. Input from the community was incorporated, with v.2 currently under review. https://pastebin.com/7SvuVyyY
+Ticket-voter [messaging](https://pastebin.com/7SvuVyyY) as a tool for educating people on how Decred’s voting system works was created. Input from the community was incorporated, with v.2 currently under review. 
 
-An article on the treasury proposal appeared in InvestInBlockchain.com: https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/
+An [article](https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/) on the proposal to decentralize the Treasury appeared on InvestInBlockchain.com.
 
-Matheusd drafted a blogpost on the Lightning Network Testnet on Medium and it was published on HackerNoon https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e 
+@matheusd drafted a [blogpost](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e ) on the Lightning Network Testnet on Medium and it was published on HackerNoon.
 
-AMA with Jake happened on r/cryptocurrency, which has  more than 869k members. Luke generated this opportunity when he presented at Coinbase at second Meetup in SF. https://old.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/
+AMA with @jy-p [happened](https://old.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on r/cryptocurrency, which has  more than 869k members. @lukebp generated this opportunity when he presented at Coinbase at second Meetup in SF. 
 
-Ditto/Dustin will have an AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is May 17th at Noon EST. 
-    
-* Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
+Ditto/@Dustorf will have an AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is May 17th at Noon EST. 
+
+Community Efforts:
+
+* 
+
+
+
+
+
 * "Certified on Binance" {what does it mean? how did it happen? ask s_ben to comment}
 
 {ratings news}
 
+https://blockgeeks.com/guides/decred/
+
+
+
+
+
 Selected articles:
 
-* https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/
-* https://medium.com/@NoahPierau/unpacking-decreds-social-contract-69c413aa652
+* Unpacking Decred's Social Contract by @Haon ([medium](https://medium.com/@NoahPierau/unpacking-decreds-social-contract-69c413aa652))
+* Be one of the first to test the DCR Lightning Network by @matheusd ([medium](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e))
+* Crypto Briefing reviewed Decred and [awarded](https://cryptobriefing.com/decred-digital-asset-report-dcr-token-review/) it a C+, "... Decred has a smaller merchant network and less active ecosystem compared to its rivals. In addition, the massive inflation rate discourages users to utilize DCR as a means of payment"
+* 
+* 
 
-Matheusd's article was published to HackerNoon https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e
-
-<https://blockgeeks.com/guides/decred/>
+<>
 
 Translations:
 
@@ -232,13 +246,14 @@ Translations:
 
 Videos:
 
-* Jake Yocom-Piatt's Keynote Speech at OKCoin + Decred San Francisco Event https://www.youtube.com/watch?v=l2Vu0JX7Xbc
+* @jy-p's [Keynote](https://www.youtube.com/watch?v=l2Vu0JX7Xbc) at OKCoin + Decred San Francisco Event 
 
 Audio:
 
-* {}
+* @Haon on Chain Reaction [podcast](https://player.fm/series/chain-reaction-2478788/noah-pierau-on-blockchain-governance-decred-bitcoin-dash-ethereum) talking about Blockchain Governance
+* Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
 
-Decred was added to Bitwise Top 20 Mid Cap Crypto Index https://www.reddit.com/r/decred/comments/bgiqh0/bullish_bitwise_has_updated_their_top_20_mid_cap/
+
 
 ## Community Discussions
 
@@ -268,11 +283,21 @@ Comm systems news:
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
-Selected reddit discussions: [Decred wants you: Be one of the first to test the DCR Lightning Network](https://www.reddit.com/r/decred/comments/bhjfty/decred_wants_you_be_one_of_the_first_to_test_the/), [Does 48% of coins locked in staking result in lower volatility?](https://www.reddit.com/r/decred/comments/bh1erw/decred_has_48_of_coins_lockedup_in_staking/), [Calculation of annualized Decred staking yields: much better than buying Muni Bonds or US Treasury Bills](https://www.reddit.com/r/decred/comments/bg51sb/calculation_of_annualized_decred_staking_yields/)
+Selected reddit discussions: 
 
-@jy-p did an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on /r/cryptocurrency on May 2
+* Decred wants [you](https://www.reddit.com/r/decred/comments/bhjfty/decred_wants_you_be_one_of_the_first_to_test_the/): Be one of the first to test the DCR Lightning Network,  
 
-Selected tweets: @coinbase [tweeting](https://twitter.com/coinbase/status/1116086283468722181) the Decred presentation by @lukebp, @pascaltmn [tweeting](https://twitter.com/pascaltmn/status/1120006806397489159) about Decred as a Bitcoin hedge, @hackernoon [tweeting](https://twitter.com/hackernoon/status/1123648279458217985) about @matheusd's Lightning post.
+* Does 48% of coins locked in staking result in lower [volatility](https://www.reddit.com/r/decred/comments/bh1erw/decred_has_48_of_coins_lockedup_in_staking/)?,  Decred was [added](https://www.reddit.com/r/decred/comments/bgiqh0/bullish_bitwise_has_updated_their_top_20_mid_cap/) to Bitwise Top 20 Mid Cap Crypto Index
+* fintechprof is going '[all-in](https://www.reddit.com/r/decred/comments/biipw3/im_going_allin_on_decred_here_is_why/)' on Decred (with their energy, not by irresponsibly investing their savings/loans), and outlined the reasons for this enthusiastic embrace.
+* Decred enthusiasts are heartily [invited](https://www.reddit.com/r/decred/comments/bi387g/new_sub_for_all_things_crypto_staking_decred/) to a new subreddit about crypto staking.
+
+* @jy-p did an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on /r/cryptocurrency on May 2
+
+Selected tweets: 
+
+* @coinbase [tweeting](https://twitter.com/coinbase/status/1116086283468722181) the Decred presentation by @lukebp 
+* @pascaltmn [tweeting](https://twitter.com/pascaltmn/status/1120006806397489159) about Decred as a Bitcoin hedge
+* @hackernoon [tweeting](https://twitter.com/hackernoon/status/1123648279458217985) about @matheusd's Lightning post
 
 ## Markets
 
