--- a/journal/201904.md
+++ b/journal/201904.md
@@ -258,7 +258,7 @@ Facilitated an AMA with Jake on r/cryptocurrency, which has  more than 869k memb
 Organizing a Ditto/Dustin AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is mid-May (details to come!). 
     
 * Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
-* "Certified on Binance" {what does it mean? how did it happen? ask s_ben to comment}
+* Decred was [V Label Verifiied](https://medium.com/binanceexchange/binance-infos-v-label-verification-f3506f64b292) on Binance. To become verified, an official member of the project (someone with a Decred email and KYC'd identity on Binance) reviewed and verified the information on Decred's [profile page](https://info.binance.com/en/currencies/decred). This allowed us an opportunity to update the project description to be more accurate and incorporate new marketing messaging, as well as correct some erroneous information about Decred's launch (a common task). 
 
 {ratings news}
 
