--- a/journal/201904.md
+++ b/journal/201904.md
@@ -24,32 +24,28 @@ Following the successful consensus rule change [vote](https://voting.decred.org/
 
 Work started to add [optional authentication](https://github.com/decred/dcrwallet/pull/1437) for gRPC API, which allows to omit private passphrase in API calls that require an unlocked wallet. {verify with devs, ask what is this needed for}
 
+{@s_ben's spin on the change:}
+
+To resolve authentication issues that arise when unlocked wallets are isolated via physical and networked segmentation {requested by VSPs? staking providers?}, an optional authentication method was [added](https://github.com/decred/dcrwallet/pull/1437) whereby if a client successfully authenticates, it does not require a private passphrase for every action requested by the client, but instead allows wallets to be unlocked via passphrase token {NEEDS REVIEW FOR ACCURACY}.
+
 [Decrediton](https://github.com/decred/decrediton): Responsive design was [implemented](https://github.com/decred/decrediton/pull/2094) in Create New Wallet view. The design phase is complete for most views as tracked in this [master issue](https://github.com/decred/decrediton/issues/1820), more implementation to come.
 
 [Politeia](https://github.com/decred/politeia): An upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-* LN beta https://matheusd.com/post/announcing-dcrlnd/
-* LN faucet skinned for Decred https://github.com/matheusd/lightning-faucet/pull/4 {check with joholdstock if OK to announce}
-* LN faucet website up that allows you to create payment channels {check with joholdstock if OK to announce}
-* http://ln-map.jamieholdstock.com/
-* https://github.com/decred/dcrlnd/releases/tag/v0.1.0
+Decred’s Lightning Network (LN) is live on testnet! After months of hard work, and several changes across the whole software stack, Decred’s official port of the original [lnd daemon](https://github.com/lightningnetwork/lnd), [dcrlnd](https://github.com/decred/dcrlnd), has been [released](https://matheusd.com/post/announcing-dcrlnd/) and is ready for testnet usage. All unit and integration tests from the upstream Lightning Network project and are passing, and an initial integration with Decredition has been completed, allowing for basic LN wallet functionality (adding/withdrawing funds, opening/closing channels, sending payments) [Can’t find PRs related to this. Are there any we can link to?]. 
+A lnd faucet has been [styled](https://github.com/matheusd/lightning-faucet/pull/4) for Decred look and feel. Check out one of several testnet faucets [here](https://testnet-dcrln-01.davec.name/) for a peek.  
+
+Work is underway to prepare LN for mainnet, and Lightning will be technically activated on mainnet after the fixlnseqlock agenda [activates](https://explorer.dcrdata.org/agendas) in block 342784, around May 9. ", It is not recommended that users put any DCR at risk on mainnet until further integration and testing is complete [correct advice?].
 
 [dcrandroid](https://github.com/decred/dcrandroid): 
 
-Minor bug fixes and language optimizations..
-
-Started work:
-* Biometric implementation: adds an extra layer of security by requesting the user users biometric authentication before entering wallet passphrase https://github.com/decred/dcrandroid/pull/343
-
-{}
+Minor bug fixes and language optimizations continue. Optional biometric authentication option has been [implemented](https://github.com/decred/dcrandroid/pull/343) and will be released in the next version, adding an extra layer of security on top of entering the wallet passphrase. 
 
 [dcrios](https://github.com/raedahgroup/dcrios): {}
 
-{Have put the following copy out for review on the ios mobile testing telegram channel:}
-
-Dcrios beta saw continued testing by community members and refinements. Only a few outstanding bugs remain, and team members continue working through the formal process of getting the app approved by the Apple Store. 
+Dcrios beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and team members continue working through the formal process of getting the app approved by the Apple Store.
 
 Trezor: {}
 
@@ -59,12 +55,7 @@ Trezor: {}
 
 [docs](https://github.com/decred/dcrdocs): {}
 
-Changes released:
-* New page on premine https://github.com/decred/dcrdocs/pull/913
-* New page on how to verify ticket votes via the Decred Block Explorer and CLI https://github.com/decred/dcrdocs/pull/907
-* New page on hardware wallets https://github.com/decred/dcrdocs/pull/927
-* Overhaul of Introduction to Decred Governance page in attempt to introduce complex concepts in a more accessible way https://github.com/decred/dcrdocs/pull/925
-* 
+New pages: [Premine](https://docs.decred.org/advanced/premine/) creates an official document of the Decree blockchain launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes using the Decred block explorer or the Command Line Interface (CLI), [Hawdare Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making.
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
