edits to Media and Comm discussions

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -224,8 +224,6 @@ Community Efforts:
 
 {ratings news}
 
-https://blockgeeks.com/guides/decred/
-
 
 
 
@@ -235,10 +233,8 @@ Selected articles:
 * Unpacking Decred's Social Contract by @Haon ([medium](https://medium.com/@NoahPierau/unpacking-decreds-social-contract-69c413aa652))
 * Be one of the first to test the DCR Lightning Network by @matheusd ([medium](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e))
 * Crypto Briefing reviewed Decred and [awarded](https://cryptobriefing.com/decred-digital-asset-report-dcr-token-review/) it a C+, "... Decred has a smaller merchant network and less active ecosystem compared to its rivals. In addition, the massive inflation rate discourages users to utilize DCR as a means of payment"
-* 
-* 
-
-<>
+* Blockchain Voter Apathy ([medium](https://medium.com/wave-financial/blockchain-voter-apathy-69a1570e2af3)) - considers voter participation in a selection of blockchain projects (including Decred)
+* Blockchain proposal voting notes by @richard-red ([github](https://github.com/RichardRed0x/crypto-governance-research/blob/master/governance-proposals/proposal-data-notes.md)) - a review of proposal voting data-sets added for Decred, Dash and Aragon
 
 Translations:
 
@@ -280,8 +276,6 @@ Comm systems news:
 * Trivia: did you know there are [12 mods](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) in the Telegram group? {accurate info?}
 * Fake account impersonating as "Decred" were detected on Facebook running giveaways. Stay vigilant.
 * @degeri joined as a new Reddit moderator to keep r/decred clean from everyday spam. Welcome!
-
-{selected discussed topics, as bullet list or one paragraph per topic}
 
 Selected reddit discussions: 
 
