added selected article

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -109,6 +109,8 @@ Voting concluded for a further 3 proposals in April.
 
 The proposal to fund [Trust Wallet](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) integration (estimated cost of $3,300 plus $100/month ongoing) was approved with 67% Yes votes. The proposal to open an RFP type process for [ATM integration](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) was narrowly rejected with 52.5% Yes votes - the first proposal to be rejected with > 50% Yes votes. In a [discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15542882616188dHEHP:decred.org?via=decred.org&via=matrix.org&via=zettaport.com) in the #proposals channel there seemed to be consensus that it would be fair to try again with a different version of this proposal, as it was only narrowly rejected. The proposal to bring Decred to Africa (Ghana) by @georgepro was rejected with just 5.4% Yes votes. Following the conclusion of voting (when comments are no longer open on Politeia) @jet_user made a long and thoughtful [comment](https://www.reddit.com/r/decred/comments/b9vhee/voting_has_started_for_the_bring_decred_to_africa/eks6578/) on the reddit post related to this proposal.
 
+For a more detailed overview of Politeia and related action check out Politeia Digest [issue 14.](https://medium.com/politeia-digest/issue-14-apr-1-apr-16-2019-1ad873ccafb)
+
 dcrdata's alpha version now offers [charts](https://alpha.dcrdata.org/proposals) showing the votes for a proposal over time, making the data in the [repository](https://github.com/decred-proposals/mainnet) about how the votes came in much more accessible.
 
 ## Network
@@ -245,6 +247,7 @@ Translations:
 Videos:
 
 * @jy-p's [Keynote](https://www.youtube.com/watch?v=l2Vu0JX7Xbc) at OKCoin + Decred San Francisco Event 
+* @joshuam [presentation](https://www.youtube.com/watch?v=QeNfs7lUV38) at TABConf 2019, giving an introduction to the Decred cryptocurrency, community and economy/organization.
 
 Audio:
 
