expanded BSV delisting story

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -328,7 +328,7 @@ Zcoin [announced](https://zcoin.io/further-disclosure-on-zerocoin-vulnerability/
 
 In [part 4](https://blog.0xproject.com/0x-roadmap-2019-part-4-proposal-for-stake-based-liquidity-incentive-52c16558df29) of the 0x Roadmap [ZEIP-31](https://github.com/0xProject/ZEIPs/issues/31) was proposed, which would add incentives for market makers to hold the ZRX token. This is in response to a lack of correlation between users of 0x and ZRX token holders. ZRX is designed to be used to govern the protocol, which is unlikely to work well in a scenario where the main users do not hold any ZRX. The proposal is at the start of a long process to develop and audit the new smart contracts then hold a tokenholder vote to approve/reject the integration of the changes. 
 
-Couple of exchanges joined delisting war to delist bitcoinSV - https://www.coindesk.com/kraken-exchange-joins-binance-shapeshift-in-delisting-bitcoin-sv
+Bitcoin (Cash) Satoshi's Vision (BSV) has been [delisted](https://www.coindesk.com/kraken-exchange-joins-binance-shapeshift-in-delisting-bitcoin-sv) by a number of exchanges as part of an ongoing feud between Craig S Wright and some members of the Bitcoin community. Ironic that the poor behavior of a very visible front man is causing so much trouble for BSV.
 
 Bitfinex encountered some [trouble](https://bitcoinmagazine.com/articles/bitfinex-faces-legal-action-from-ny-attorney-general-heres-what-this-means/) from the New York Attorney General's office, in the form of a request for a court order to investigate transactions between certain legal entities relating to Bitfinex and Tether. Specifically, the NY AG alleges that Bitfinex lost some $850 million held by Crypto Capital (they claim it has been frozen), and borrowed from Tether reserves in order to keep Bitfinex operational. Tether [updated](https://news.bitcoin.com/while-tether-withdraws-claim-of-usd-backing-rival-stablecoins-provide-monthly-attestations/) their terms on [Feb 26](https://archive.today/yw7nb), adding that it may now back USDT by assets other than USD and delay the redemption or withdrawal because of poor liquidity or unavailability of the assets.
 
