--- a/journal/201904.md
+++ b/journal/201904.md
@@ -316,7 +316,7 @@ The Dash sporking upgrade process [completed](https://blog.dash.org/product-upda
 
 The EOS constitution has been replaced with a new [user agreement](https://github.com/eosnewyork/eosuseragreement/blob/master/README.md), proposed on chain by [EOS New York](https://medium.com/eos-new-york/the-eos-user-agreement-has-been-proposed-on-chain-61bf3760b604) and [approved](https://eosauthority.com/approval/view?scope=eosnewyorkio&name=eosuseragree&lnc=en) by the 21 Block Producers. This change had been put to EOS holders in a [referendum](https://eosauthority.com/polls_details?proposal=eosuseragree_20190207&lnc=en). The referendum has a long duration (3 months) and is not due to finish until May 8, there is strong support for the proposal (98% Yes) but voter participation is very low (1.7%). EOS referendums had a notional quorum requirement of 15%, but in light of the fact that none of the polls are even close to reaching that level of participation, it seems like the BPs have decided to bypass the formal referendum process and move forward with some of the proposed changes. The EOS BPs also [approved](https://twitter.com/zeroxeos/status/1118833569118466048) the deployment of REX (Resource Exchange), but it [failed](https://www.reddit.com/r/eos/comments/bekd4f/rex_is_here_status_approved_by_15_bp/) execution on chain and will have to be re-proposed.
 
-Aeternity is [planning](https://blog.aeternity.com/aeternity-first-on-chain-governance-vote-decentralization-2-0-5e0c8a01891a) to hold its first on-chain governance vote May 7-14. The proposal to be voted on is establishing a "Block Reward Initiative (BRI), through which ~0–20% of miner rewards will be allocated to development". The announcement post references Aeternity's ICO funds as being sufficient to fund development for years to come, and positions the BRI as a transition to a self-sustaining platform. BRI funds would be given to a charitable foundation registered in Liechtenstein, and administered by a technical council. AE token holders will vote for 0, 5, 10, 15 or 20% of the block rewards to go to this foundation - as long as more than 50% of AE votes for a share greater than 0%, the percentage will be set using a weighted average of the votes for options greater than 0%.
+Aeternity is [planning](https://blog.aeternity.com/aeternity-first-on-chain-governance-vote-decentralization-2-0-5e0c8a01891a) to hold its first on-chain governance vote May 7-14. The proposal to be voted on is establishing a "Block Reward Initiative (BRI), through which ~0–20% of miner rewards will be allocated to development". The announcement post references Aeternity's ICO funds as being sufficient to fund development for years to come, and positions the BRI as a transition to a self-sustaining platform. BRI funds would be given to a charitable foundation registered in Liechtenstein, and administered by a technical council. AE token holders will vote for 0, 5, 10, 15 or 20% of the block rewards to go to this foundation - as long as more than 50% of AE votes for a share greater than 0%, the percentage will be set using a weighted average of the votes for options greater than 0%. This will leave some AE holders who don't want the block reward funding with a difficult choice of whether to vote for 0% and hope to be in the majority (and otherwise be ignored) or to vote for 5% to lower the weighted average in the case that the proposal is approved.
 
 Ycash, a "friendly fork" of Zcash, was [announced](https://forum.zcashcommunity.com/t/announcing-ycash-the-first-friendly-fork-of-the-zcash-blockchain/33162). Ycash will build off a snapshot of the Zcoin chain, and will diverge in two ways (replacing the current 20% Founders Reward with a perpetual 5% reward going to a newly created Ycash foundation, and switching the PoW mining algorithm to something more conducive to mining on commodity hardware) while aiming to incorporate future improvements from Zcash. Zooko Wilcox wrote a [blog post](https://z.cash/blog/future-friendly-fork/) about "A Future Friendly Fork" in 2017, and this appears to have inspired the positioning of Ycash as a friendly fork. Zooko has also commented on the Ycash post to say that he sees Ycash as a positive development for Zcash.
 
