--- a/journal/201904.md
+++ b/journal/201904.md
@@ -6,15 +6,13 @@ April saw the launch of Lightning Network on Decred's testnet, this is a great t
 
 LN will become available on mainnet when DCP0004 activates in block 342,785 (~ May 9), but it will take time to build up the network and work out the kinks. Use of DCR LN should for now be considered experimental and not involve large sums of DCR. Testnet is where the LN action will happen for some time.
 
-Once a transaction is mined which relies on DCP0004 changes to be considered valid, any nodes running older Decred software (pre v1.4.0) will reject this block and be forked off the Decred chain. For this reason it is important to **upgrade your nodes - don't be forked off the network on May 9!**
-
 Politeia software saw a significant round of performance improvements and new features (like diff viewing for proposal versions) deployed on the live proposals site. The contractor management system is ready to go in a basic form and will be used for collecting and processing contractor invoices in April.
 
 This month's edition of Decred Journal has been a more decentralized production than usual, with @bee stepping back from the pivotal role they have played thus far (but keeping a steady supply of notes coming) and other contributors doing a bit more than they usually would.
 
 ## Upgrade your nodes!
 
-Following the successful consensus rule change [vote](https://voting.decred.org/) to update sequence lock rules, the rule change will activate in block 342,785 (~9 May). Once someone makes a transaction that only works because of the rule change, any nodes that are still following the old rules (i.e. any software version before v1.4.0) will cease following the legitimate Decred chain. It is therefore important that all nodes (miners, voters, users, merchants, service providers) upgrade their Decred software to v1.4.0 before May 9. 
+The successfully [voted in](https://voting.decred.org/) rule change DCP0004 (updating sequence lock rules to enable LN) will activate in block 342,785 (~9 May). Once someone makes a transaction that relies on this rule change, any nodes that are still following the old rules (i.e. any software version before v1.4.0) will cease following the legitimate Decred chain. It is therefore important that all nodes (miners, voters, users, merchants, service providers) upgrade their Decred software to v1.4.0 before May 9. **Don't be forked off the network on May 9!**
 
 ## Development
 
