--- a/journal/201904.md
+++ b/journal/201904.md
@@ -4,7 +4,7 @@
 
 April saw the launch of Lightning Network on Decred's testnet, this is a great time to [check it out](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e), do some testing, and start building on DCR LN. 
 
-LN will become available on mainnet when DCP0004 activates in block 342,784 (~ May 9), but it will take time to build up the network and improve the user experience. Use of DCR LN should for now be considered experimental and not involve large sums of DCR. Testnet is where the LN action will happen for some time.
+LN will become available on mainnet when DCP0004 activates in block 342,785 (~ May 9), but it will take time to build up the network and work out the kinks. Use of DCR LN should for now be considered experimental and not involve large sums of DCR. Testnet is where the LN action will happen for some time. It is also important for all nodes to **upgrade before May 9th to avoid being forked off the network!**
 
 Politeia software saw a significant round of performance improvements and new features (like diff viewing for proposal versions) deployed on the live proposals site. The contractor management system is ready to go in a basic form and will be used for collecting and processing contractor invoices in April.
 
