--- a/journal/201904.md
+++ b/journal/201904.md
@@ -120,7 +120,7 @@ New merchants:
 
 * {}
 
-{applications of Decred blockchain and related projects: Politeia, atomicswap}
+@emiliomann [reported](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155647666530320DEMIu:decred.org?via=decred.org&via=matrix.org) that Edilson, one of the Originalmy team members was involved in the .tax blockchain [hackathon](https://startupwiseguys.com/blockchain/) in Latvia, which was looking for innovative solutions to improve public governance. Edilson worked with one of the teams on a project to remove the need for paper receipts using dcrtime. 
 
 {investment adoption}
 
@@ -137,6 +137,8 @@ Website Updates: The architecture is set and a first draft of the copy is writte
 Decred in Depth Podcast: anshawblack is traveling to NYC for Blockchain Week beginning on May 11th and plans to record episodes with jy-p, muststopmurad, Joel Monegro, JZ, permabull nino, and Trey Ditto. He will then edit and trickle out the episodes over the coming weeks and months.  
 
 Community Organizers: The volume of Decred meetups and the number of events attended below highlights the success we’ve had mobilizing communities across the world. A meetup guide and tools to execute meetups will be part of the website updates. Until then, assets can be found [on the Github Design Repo](https://github.com/decred/dcrdesign/releases). A reminder that if you would like a meetup in your neighborhood, start one! Decred community members take the lead on everything, there is no one dictating what happens where, simply community enablement. 
+
+Decred was [V Label Verifiied](https://medium.com/binanceexchange/binance-infos-v-label-verification-f3506f64b292) on Binance. To become verified, an official member of the project (someone with a Decred email and KYC'd identity on Binance - @s_ben) reviewed and verified the information on Decred's [profile page](https://info.binance.com/en/currencies/decred). This allowed us an opportunity to update the project description to be more accurate and incorporate new marketing messaging, as well as correct some erroneous information about Decred's launch (a common task).
 
 ## Events
 
@@ -190,22 +192,6 @@ An [article](https://www.investinblockchain.com/put-your-money-where-your-mouth-
 AMA with @jy-p [happened](https://old.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on r/cryptocurrency, which has  more than 869k members. @lukebp generated this opportunity when he presented at Coinbase at second Meetup in SF. 
 
 Ditto/@Dustorf will have an AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is May 17th at Noon EST. 
-
-Community Efforts:
-
-* 
-
-
-
-
-
-* Decred was [V Label Verifiied](https://medium.com/binanceexchange/binance-infos-v-label-verification-f3506f64b292) on Binance. To become verified, an official member of the project (someone with a Decred email and KYC'd identity on Binance) reviewed and verified the information on Decred's [profile page](https://info.binance.com/en/currencies/decred). This allowed us an opportunity to update the project description to be more accurate and incorporate new marketing messaging, as well as correct some erroneous information about Decred's launch (a common task).
-
-{ratings news}
-
-
-
-
 
 Selected articles:
 
