--- a/journal/201904.md
+++ b/journal/201904.md
@@ -206,7 +206,8 @@ Selected articles:
 
 Translations:
 
-* {}
+* Guides to solo staking and ticket splitting have been [translated](https://mp.weixin.qq.com/s/lAxmWYItifQldGgwTVOWHw) to Chinese by @wanbihou. Check out [dcrclub.org](https://blog.dcrclub.org/) for a collection of Chinese translations of Decred articles.
+* @akinsawyerr translated a Decred review by iBotics Research from [Spanish](http://ibotics.es/reports/iBotics_Research_DCR.pdf) to [English](https://matrix.decred.org/_matrix/media/v1/download/matrix.org/jydLGITgpJxAdXwKrDBgIgtU). 
 
 Videos:
 
@@ -241,9 +242,7 @@ Comm systems news:
 * Servers hosting matrix.org and riot.im were compromised and taken down on Apr 11 for emergency security maintenance, disrupting our communications for several hours. If your homeserver is matrix.org, change your password. Incident report [here](https://matrix.org/blog/2019/04/11/security-incident/), tweet timeline [here](https://twitter.com/matrixdotorg/status/1116304867683905537), and [here](https://github.com/matrix-org/matrix.org/issues/371) are recommendations from the hacker to the admins. Decred's homeserver (matrix.decred.org) was not affected. {clarify with admins}. A good moment to say thanks to our admins who work every day to keep a lot of self-hosted infrastructure running. The incident disrupted our comms for many hours because many people are using the browser Riot.im client which was taken offline. To be resilient against such issues, users should consider installing standalone client (desktop or mobile). Another idea is to [self-host Riot](https://github.com/xaur/decred-issues/issues/62).
 * There were multiple interruptions in the bridge and many messages were not delivered across the bridge.
 * Matrix is moving to stop supporting self-signed certificates and rely on Certificate Authorities to behave.
-* {someone please comment on how Telegram groups evolve and what interesting is going on}
-* Trivia: did you know there are [12 mods](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) in the Telegram group? {accurate info?}
-* Fake account impersonating as "Decred" were detected on Facebook running giveaways. Stay vigilant.
+* Fake account impersonating as "Decred" was detected on Facebook running giveaways. Stay vigilant.
 * @degeri joined as a new Reddit moderator to keep r/decred clean from everyday spam. Welcome!
 
 Selected reddit discussions: 
@@ -253,6 +252,7 @@ Selected reddit discussions:
 * fintechprof is going '[all-in](https://www.reddit.com/r/decred/comments/biipw3/im_going_allin_on_decred_here_is_why/)' on Decred (with their energy, not by irresponsibly investing their savings/loans), and outlined the reasons for this enthusiastic embrace.
 * Decred enthusiasts are heartily [invited](https://www.reddit.com/r/decred/comments/bi387g/new_sub_for_all_things_crypto_staking_decred/) to a new subreddit about crypto staking.
 * [Post](https://www.reddit.com/r/decred/comments/b8k2i0/where_can_i_read_about_the_pseudo_random_number/) about the pseudo random number generator that randomly selects tickets in Decred.
+* [Pre-proposal](https://www.reddit.com/r/decred/comments/b84t6b/preproposal_second_constitutional_amendment_to/) suggesting a second constitutional amendment to declare Feb 8 International day of Stakey.
 * @jy-p did an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on /r/cryptocurrency on May 2
 
 Selected tweets: 
