--- a/journal/201904.md
+++ b/journal/201904.md
@@ -35,7 +35,7 @@ Work is underway to prepare LN for mainnet, and Lightning will be technically ac
 
 [dcrdata](https://github.com/decred/dcrdata) v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [vote tracking](https://explorer.dcrdata.org/agendas) for live on-chain consensus rules change proposals, along with a number of performance improvements and minor fixes. Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the [alpha.explorer.org](https://alpha.dcrdata.org/proposals) site. 
 
-[docs](https://github.com/decred/dcrdocs):  New pages: [Premine](https://docs.decred.org/advanced/premine/) is dedicated to describing Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes using the Decred block explorer or the Command Line Interface (CLI), [Hawdare Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making.
+[docs](https://github.com/decred/dcrdocs):  New pages: [Premine](https://docs.decred.org/advanced/premine/) is dedicated to describing Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes using the Decred block explorer or the Command Line Interface (CLI), [Hardare Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making.
 
 Dev activity stats for April: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -61,7 +61,7 @@ Proposal status as of Apr 4:
 
 3 new proposals were submitted in April:
 
-[Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) submitted by @moo31337, a proposal to hold monthly on-chain votes to approve Treasyrt spends. Voting has not started yet.
+[Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) submitted by @moo31337, a proposal to hold monthly on-chain votes to approve Treasury spends. Voting has not started yet.
 
 This proposal attracted a lot of discussion and was featured in the news. Some implementation details are omitted by design:
 
