--- a/journal/201904.md
+++ b/journal/201904.md
@@ -35,7 +35,9 @@ Work is underway to prepare LN for mainnet, and Lightning will be technically ac
 
 [dcrdata](https://github.com/decred/dcrdata) v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [vote tracking](https://explorer.dcrdata.org/agendas) for live on-chain consensus rules change proposals, along with a number of performance improvements and minor fixes. Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the [alpha.explorer.org](https://alpha.dcrdata.org/proposals) site. 
 
-[docs](https://github.com/decred/dcrdocs):  New pages: [Premine](https://docs.decred.org/advanced/premine/) is dedicated to describing Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes using the Decred block explorer or the Command Line Interface (CLI), [Hardare Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making.
+[docs](https://github.com/decred/dcrdocs):  New pages: [Premine](https://docs.decred.org/advanced/premine/) is dedicated to describing Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes using the Decred block explorer or the Command Line Interface (CLI), [Hardare Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making. 
+
+[dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): A new bot has been deployed on twitter in late March. Mention [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) in a comment and the bot will store a json copy of the thread in IPFS and uses dcrtime to anchor the data in the Decred blockchain, then message the user who invoked it with 
 
 Dev activity stats for April: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -290,4 +292,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, Dustorf, guang, Haon, richardred, s_ben.
+Credits (alphabetical order): bee, Dustorf, elian, guang, Haon, issedjur, liz_bagot, lukebp, matheusd, richardred, s_ben, saender.
