minor fixes from elian and sambiohazard

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -33,9 +33,9 @@ Work is underway to prepare LN for mainnet, and Lightning will be technically ac
 
 [dcrios](https://github.com/raedahgroup/dcrios): Dcrios beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and team members continue working through the formal process of getting the app approved by the Apple Store.
 
-[dcrdata](https://github.com/decred/dcrdata) v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [vote tracking](https://explorer.dcrdata.org/agendas) for live on-chain consensus rules change proposals, along with a number of performance improvements and minor fixes. Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the [alpha.explorer.org](https://alpha.dcrdata.org/proposals) site. 
+[dcrdata](https://github.com/decred/dcrdata) v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [vote tracking](https://explorer.dcrdata.org/agendas) for live on-chain consensus rules change proposals, along with a number of performance improvements and minor fixes. Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the [alpha.dcrdata.org](https://alpha.dcrdata.org/proposals) site. 
 
-[docs](https://github.com/decred/dcrdocs):  New pages: [Premine](https://docs.decred.org/advanced/premine/) is dedicated to describing Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes using the Decred block explorer or the Command Line Interface (CLI), [Hardare Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making. 
+[docs](https://github.com/decred/dcrdocs):  New pages: [Premine](https://docs.decred.org/advanced/premine/) is dedicated to describing Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes using the Decred block explorer or the Command Line Interface (CLI), [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making. 
 
 [dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): A new bot has been deployed on twitter in late March. Mention [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) in a comment and the bot will store a json copy of the thread in IPFS and uses dcrtime to anchor the data in the Decred blockchain, then message the user who invoked it with 
 
@@ -83,9 +83,9 @@ dcrdata's alpha version now offers [charts](https://alpha.dcrdata.org/proposals)
 
 ## Network
 
-Hashrate: April's hashrate opened at ~377 Ph/s and closed ~530 Ph/s, bottoming at 276 Ph/s and peaking at 676 Ph/s throughout the month. Pool hashrate distribution as of Mar 1: Poolin 21%, lab.antpool.com 20%, F2Pool 18%, BTC.com 10%,UUPool	9%, Luxor 2.9%, CoinMine 0.37%, beepool.org 0.09%, suprnovaa 0.04% and others 188% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: April's hashrate opened at ~377 Ph/s and closed ~530 Ph/s, bottoming at 276 Ph/s and peaking at 676 Ph/s throughout the month. Pool hashrate distribution as of Mar 1: Poolin 21%, lab.antpool.com 20%, F2Pool 18%, BTC.com 10%,UUPool	9%, Luxor 2.9%, CoinMine 0.37%, beepool.org 0.09%, suprnovaa 0.04% and others 18.8% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: 30-day average ticket price was 117.22 DCR (+4.92) on May 1 per dcrstats.com.. The price varied between 105.44-127.72 DCR. Locked amount was 4.51-4.76 million DCR, which corresponded to 47-49% of the available supply.
+Staking: 30-day average ticket price was 117.22 DCR (+4.92) on May 1 per dcrstats.com. The price varied between 105.44-127.72 DCR. Locked amount was 4.51-4.76 million DCR, which corresponded to 47-49% of the available supply.
 
 Nodes: As of May 3 there were 180 public listening nodes and 201 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: v1.5.0 dev builds: 26% (+19.31%), v1.4.0: 45% (-10.38%), v1.4.0 dev and rc builds: 5% (-0.46%), v1.3.0: 12% (-4.61%), v1.2.0: 7.4% (-2.07%), v1.1.2: 2.8% (-6.61%), v1.1.0: 2.4% (+0.77%).
 
@@ -125,6 +125,7 @@ Attended:
 * Apr 4-5 - [BitcoinDay Argentina](https://decredcommunity.org/events/bitcoinday-argentina) - Cordoba. @elian presented a keynote "Decred in 20 minutes" introduction to the project, and also a "How to become a Decred contractor" talk as part of the workshop. 
 * Apr 8 - [Decred: Tools, Use and Contribution](https://www.meetup.com/decredpdx/events/260098916/) - Portland, USA. 17 attendees heard @isaacj give an in depth talk on Decred tools, use and contribution, and development updates from @raedah, @isaacj and @s_ben. The community is growing in numbers and engagement. Everyone is excited and looking forward to the next Meetup!
 * Apr 18 - [Coordinating Open Source: Today and Tomorrow](https://www.meetup.com/San-Francisco-Decred-Meetup/events/260046546/) - Coinbase HQ, San Francisco, USA. The event was held at Coinbase HQ in partnership with Coinbase Custody. @lukebp spoke about Decred’s unique governance and self-funding model. There was then a moderated discussion about tradeoffs of different funding models, and Luke answered questions for over an hour. Approximately 70 people attended.
+* Apr 18 - [Binance LATAM AMA](https://twitter.com/binance/status/1118883131799400449?s=19). @elian participated in a Spanish language AMA with  AMA with members of the Binance Latam community, receiving and answering question from users on Facebook and Telegram.
 * Apr 22-26 - Talent Land - Guadalajara, Mexico. @elian provided a [summary](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155690701035573YcsMH:matrix.org?via=decred.org&via=matrix.org) of the event and Decred's participation. The event was attended by over 60,000 people, and Decred was the only major cryptocurrency represented in 'Blockchain Land'. A talk titled “Decred: el dinero del futuro” was attended by around 35 people, and hundreds more stopped by to talk to the Decred representatives at the booth. Attendees responded well to the "idea of be your own bank", and also the concept of Decred as self-funding open source software production.
 * Apr 24-25 - Blockchain Summit - Rabat, Morocco. @arij (@butterfly in Slack) presented Decred and exhibited. Mainly students and professors from Morocco and France attended.{remove?}
 * Apr 25 - [Decred Chicago meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/) - Chicago, USA. Jack Miller hosted the inaugural meetup in Chicago. 
@@ -144,7 +145,7 @@ Upcoming:
 
 * May 18 - [Criptolatinfest](https://criptolatinfest.com/) - Bogota, Colombia. Decred will have a speaking slot.
 
-* May 20-21 - [La Conexion]( https://www.la-conexion.com/) - Melellin, Colombia. @elian will give a keynote on governance.
+* May 20-21 - [La Conexion]( https://www.la-conexion.com/) - Medellin, Colombia. @elian will give a keynote on governance.
 
 * May 23-24 - [BitcoinDay Uy](https://bitcoinday.tv/) - Montevideo, Uruguay. Speaking slot to present Decred at BitcoinDay Uruguay. This event is organized by the same group as BitcoinDay Argentina, and the invitation to present Decred comes from the project's strong showing in Argentina.
 
@@ -210,7 +211,7 @@ Community stats (snapshot taken Apr 2 01:00 UTC):
 * Discord users: 2194 (+70), Verified to Post: 199 (+38)
 * Telegram users: 3,668 (-374)
 * YouTube subscribers: 3,771 (+7)
-* Facebook followers: 3,218(+53, 2,956: (+40)
+* Facebook followers: 3,218 (+53), likes 2,956: (+40)
 * LinkedIn followers: Decred page 515 (+20), Politeia page 29 (+0)
 * GitHub dcrd stars: 486 (+7), forks: 1,285 (+28)
 
@@ -292,4 +293,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, Dustorf, elian, guang, Haon, issedjur, liz_bagot, lukebp, matheusd, richardred, s_ben, saender.
+Credits (alphabetical order): bee, Dustorf, elian, guang, Haon, issedjur, liz_bagot, lukebp, matheusd, richardred, s_ben, saender, sambiohazard.
